{
    "version": 1,
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "04c81ec4-6f9a-41bb-880b-cd295f242080",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "786e3f2a-2316-4b91-8228-1054658154ca",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "eed52841-2b84-487e-9cba-5200a78b7281",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LightPunch",
                    "type": "Button",
                    "id": "bb161f2b-48f7-47d6-8612-7da4b81cff7b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MediumPunch",
                    "type": "Button",
                    "id": "597adc1f-e099-449b-9abf-01fb3dca851c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HeavyPunch",
                    "type": "Button",
                    "id": "60744b13-2edf-409c-b9e6-1819d3866c83",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "56aaa022-6b01-439b-acfc-de40bd9d607b",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "331e8cba-2b8d-4f1c-859a-4a101425d6de",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8de06635-0b25-4a08-acfc-72d1d986a35a",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "7370072d-4797-482b-82cf-36470917d6bb",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "065f9626-c3f3-42c7-bdab-498dc242cb24",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "24e9a94d-f758-4841-91a5-4cadc5c674bb",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5aac1ac5-0b9f-48e8-85c1-7249dce7c04f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "035ad5c7-8b07-4e9f-ba93-16475d5c92e4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "68e777a1-0a21-4fea-a480-5e7422078b53",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "LightPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78041277-2f64-43e7-a701-67bddef06e4a",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "LightPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d270f7a-850e-4cd6-8c18-b6072ea3a928",
                    "path": "<Keyboard>/u",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "LightPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7bc1e31e-dd07-4ec3-a302-b18ba819d7d7",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "MediumPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9af48fcf-841f-4e91-bd1f-fee234690f80",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "MediumPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c364d140-0827-4905-9461-927b473b2c27",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "HeavyPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19321d3f-f19c-4aef-96d9-69c5f35e235c",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "HeavyPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}